Mon Jun 14 09:28:41 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst
        Add AMI4CCM test UsesMulti
        
        * connectors/ami4ccm/tests/UsesMulti/Receiver/UsesMulti_Receiver_exec.cpp
        * connectors/ami4ccm/tests/UsesMulti/Sender/UsesMulti_Sender_exec.cpp
        Expand test for running indeed asynchronous.

Mon Jun 14 09:07:19 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/ami4ccm/tests/UsesMulti/Base/UsesMulti.idl:
        * connectors/ami4ccm/tests/UsesMulti/Sender/UsesMulti_Sender.idl:
          Moved the new pragma ciao ami4ccm idl to the Base directory, that
          way we only have to specify it once, anyone that includes the
          UsesMulti.idl will get the additional needed UsesMultiA.idl included

Mon Jun 14 08:10:41 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/UsesMulti/descriptors/Plan.cdp
        Change plan for uses multi asynchronous.

Sun Jun 13 18:02:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tests/Parsing/test.cpp:
          Disable DANCE tracing by default

        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ContentFilteredTopic/Exception/Component/Exception_Test_Component_exec.cpp:
        * connectors/dds4ccm/tests/UserdataCopyCount/Component/UCC_Test_Component_exec.cpp:
          Fixed windows problems

Sat Jun 12 09:32:29 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/ContentFilteredTopic/Exception/Component/Exception_Test_Component_exec.cpp:
          Avoided 'Error' in log message.

Sat Jun 12 09:30:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Corrected path to Parsing/PlanLauncher test.

Sat Jun 12 06:31:42 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * bin/ciao_tests.lst:
          Corrected directory to Deployments tests of