@@ -1,3 +1,14 @@
+Mon Jun 14 09:30:10 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * DAnCE/tools/Artifact_Installation/Installation_Repository_Manager.h:
+        * DAnCE/tools/Artifact_Installation/DAnCE_Artifact_Installation_Handler.cpp:
+        * DAnCE/tools/Artifact_Installation/DAnCE_Artifact_Installation_Handler.h:
+        * DAnCE/tools/Artifact_Installation/Installation_Repository_Manager.cpp:
+	  Fixed missing virtual destructors.
+
+        * DAnCE/tools/Artifact_Installation/Installation_Repository_Manager_Impl.cpp:
+	  Fixed wchar compile problems.
+
 Mon Jun 14 09:28:41 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>
 
         * bin/ciao_tests.lst
